ffi/derive/tests/ui_fail/self_consuming_method.stderr
error: Methods which consume self not supported
 --> tests/ui_fail/self_consuming_method.rs:8:6
  |
8 | impl FfiStructBuilder {
  |      ^^^^^^^^^^^^^^^^

error[E0425]: cannot find function `ffi_struct_builder_new` in this scope
  --> tests/ui_fail/self_consuming_method.rs:20:25
   |
20 |     if FfiResult::Ok != ffi_struct_builder_new(s_builder.as_mut_ptr()) {
   |                         ^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `ffi_struct_builder_build` in this scope
  --> tests/ui_fail/self_consuming_method.rs:26:25
   |
26 |     if FfiResult::Ok != ffi_struct_builder_build(s_builder, s.as_mut_ptr()) {
   |                         ^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
